# motion-pattern-clustering-anomaly-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/demo/: unsupervised_models.joblib
models/results/: unsupervised_models.joblib
notebooks/: demo_walkthrough.ipynb  real_data_walkthrough.ipynb
reports/demo/: summary.json  synthetic_motion_sample.csv
reports/results/: motion_analysis.csv  summary.json
src/motion_pattern/: __init__.py  cli.py  pipeline.py
tests/: test_smoke.py
