[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motion-pattern-clustering-anomaly-detection"
version = "0.1.0"
description = "Unsupervised motion clustering and injury-risk anomaly detection pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.5",
  "matplotlib>=3.8",
  "numpy>=2.0",
  "pandas>=2.0",
  "scikit-learn>=1.5",
]

[project.scripts]
motion-pattern-demo = "motion_pattern.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
